# Parallel-Vertex-Cover-Algorithms-on-GPUs

./: .gitmodules  CMakeLists.txt  blossreq.txt  small.mtx
counterExamples/: README.md  bipartite.py
src/: AllocateBWDWorkList.cuh  BWDWorkList.cuh  BWDWorkList.h  CMakeLists.txt  CSRGraphRep.cpp  CSRGraphRep.cuh  CSRGraphRep.h  CSR_Policy.h  Counters.cuh  CrownDecomposition.h  DFSWorkList.cuh  GlobalWorkList.cuh  GlobalWorkListBFS.cuh  GlobalWorkListDFS.cuh  GlobalWorkListDFS_bits.cuh  GlobalWorkListDFS_old.cuh  GlobalWorkListEdmonds.cuh  GlobalWorkListParameterized.cuh  GlobalWorkList_DFS.cuh  GlobalWorkList_MCM.cuh  Graph.h  GraphPolicy.h  KernelArgs.cuh  LocalStacks.cuh  LocalStacksDFS.cuh  LocalStacksParameterized.cuh  Makefile  MakefileDebug  MaximumMatching.h  PCSR_Policy.h  ReductionRules.h  Sequential.cpp  Sequential.h  ThrustGraph.cu  ThrustGraph.h  auxFunctions.cpp  auxFunctions.cu  auxFunctions.h  bfstdcsc.h  bitmask.cuh  (+18 more)
src/edmonds/: edmonds.c  edmonds.cu  edmonds.cuh  edmonds.h
src/matching/: bfstdcsc.h  boostmcm.c  boostmcm.cpp  boostmcm.cu  boostmcm.h  boostmcminvoke.cpp  match.c  match.cpp  match.cu  match.h  matchgpu.cu  matchgpu.h  mmgpu.cu
src/mis/: mis.c  mis.cpp  mis.cu  mis.h  mis_kernels.cu  mis_kernels.h  misgpu.cu
test/Graph Generators/: graphGenBipartiteRandom.py
test/GraphGenerators/: graphGenBipartiteRandom.py
test/test_graphs/: cop_hat1000-3.mtx
